Fixed an alignment issue with configuration header options

--- a/src/modules/configuration/components/settings/group.scss
+++ b/src/modules/configuration/components/settings/group.scss
@@ -53,7 +53,11 @@
   }
 
   .header-option .switch {
-    padding: 5px;
+    padding: 6px;
+
+    .switch-paddle {
+      float: right;
+    }
   }
 }
 
